History of this buildout
========================

6.0.25 (unreleased)
-------------------

- Updated RelStorage versions.  [maurits]

- Fixed generated zodbconvert.cfg to have a blob-dir in the source.
  Otherwise the conversion crashes on the first record that links to a
  blob file.  Use blobstoragenew as destination blob-dir.  Note that
  in the destination blob dir you may get less files: especially .lock
  files and their blob files are not taken over, because they are not
  needed.  On a fresh copy from the live site 200MB out of 3.2 GB of
  blobs are lost/cleaned this way.  It seems fine to use either the
  original or the new blobstorage.  The new one is cleaner.  [maurits]

- Add five.pt/Chameleon.  [maurits]

- Upgrade Plone from 4.3.6 to 4.3.11.  [maurits]


6.0.24 (2016-08-30)
-------------------

- Products.PloneHotfix20160830 1.0.  [maurits]


6.0.23 (2016-07-15)
-------------------

- MINA-155 Add button styling for tinymce with upgrade step.  [lhuiskes]


6.0.22 (2016-06-13)
-------------------

- Only load Google Analytics on www.minaraad.be.  [jladage]


6.0.21 (2016-06-12)
-------------------

- Add Google Analytics code.  [jladage]


6.0.20 (2016-06-10)
-------------------

- MINA-151: Styling fixes as color to white and the correct font styling,
  Also remove the tooltip when there is a click.
  Remove login button for mobile.
  [lhuiskes]

- MINA-154: fixed error when adding a content item to a project.  This
  happened in an event handler in some project states where there was
  no committee set.  [maurits]

- MINA-153: Directly link to newsletter archive on mailchimp.com.
  Completely removed nieuwsbrieven page (mailchimp archive).  [maurits]

- MINA-151: Move inlog and logout to header underneath the search.
  and add a tooltip from jquery ui with timeout and custom styling.
  [lhuiskes]


6.0.19 (2016-06-02)
-------------------

- MINA-153: Fixed news letters page.  Fixed typo.  Used ``//`` instead