@@ -4,7 +4,7 @@
 Jinja2 = 2.8
 Products.PloneHotfix20160830 = 1.3
 mr.developer = 1.34
-setuptools = 27.2.0
+setuptools = 27.3.0
 zc.buildout = 2.5.3
 zc.recipe.egg = 2.0.3
 
@@ -13,59 +13,61 @@ Chameleon = 2.24
 collective.emaillogin4 = 1.3
 collective.embedly = 2.4
 collective.mailchimp = 2.0.2
-collective.recaptcha = 1.1.5
-collective.recipe.supervisor = 0.19
-collective.recipe.template = 1.11
-eea.faceted.vocabularies = 5.3
-eea.facetednavigation = 8.8
-eea.jquery = 8.7
+collective.recaptcha = 2.0.0
+collective.recipe.supervisor = 0.20
+collective.recipe.template = 1.13
+eea.faceted.vocabularies = 6.0
+eea.facetednavigation = 9.7
+eea.jquery = 9.3
 five.pt = 2.2.4
-Genshi = 0.6
+Genshi = 0.7
 gocept.munin = 0.1
 gocept.recipe.env = 1.0
 gp.recipe.node = 0.12.7.1
 hexagonit.recipe.cmmi = 2.0
-hexagonit.recipe.download = 1.7
+hexagonit.recipe.download = 1.7.1
 jquery.pyproxy = 0.5
 MarkupSafe = 0.23
-meld3 = 0.6.10
+meld3 = 1.0.2
 mr.scripty = 1.0b3
 munin.varnish = 1.0a3
 munin.zope = 2.1
-plone.api = 1.4.11
+norecaptcha = 0.3.0
+pip = 8.1.2
+plone.api = 1.5
 plone.app.imagecropping = 1.3+zest.1
 plone.app.themingplugins = 1.0
 plone.recipe.command = 1.1
-plone.recipe.varnish = 2.0a4.dev0
+plone.recipe.varnish = 2.0a5
 postmonkey = 1.0b
-Products.DataGridField = 1.9.4
+Products.DataGridField = 1.9.5
 Products.DCWorkflowGraph = 0.4.1
 Products.FCKeditor = 2.6.6.3
 Products.OrderableReferenceField = 1.2-beta4
-Products.PloneFormGen = 1.7.17
+Products.PloneFormGen = 1.7.19
 Products.PythonField = 1.1.3
 Products.SimpleAttachment = 5.0.0
 Products.TALESField = 1.1.3
 Products.TemplateFields = 1.2.5
 Products.ZServerViews = 0.2
 pyPDF = 1.13
-pyPDF2 = 1.25.1
+pyPDF2 = 1.26.0
 python-archive = 0.2
 quintagroup.canonicalpath = 0.7
 quintagroup.captcha.core = 0.4.3
 quintagroup.formlib.captcha = 1.4.3
 quintagroup.seoptimizer = 4.3
 recaptcha-client = 1.0.6
-reportlab = 2.6
-requests = 2.9.1
+reportlab = 3.3.0
+requests = 2.11.1
 sourcecodegen = 0.6.14
-superlance = 0.7
-supervisor = 3.1.3
+superlance = 0.13
+supervisor = 3.3.1
 threadframe = 0.2
 wildcard.fixpersistentutilities = 1.1b7
 z3c.jbot = 0.7.2
 z3c.pt = 3.0
 z3c.recipe.staticlxml = 0.10
-z3c.recipe.usercrontab = 1.1
+z3c.recipe.usercrontab = 1.4
 zc.recipe.cmmi = 1.3.6
-zc.recipe.deployment = 0.9.0
+zc.recipe.deployment = 1.3.0
